# genai_infer_service

./: pyproject.toml
genai_infer_service/: main.py
genai_infer_service/lib/: file.py  genai.py  genai_handlers.py  openapi.py  prompt_template.py
genai_infer_service/models/: Infer.py  Registration.py  Swag.py  decorators.py
genai_infer_service/routers/: genai.py  infer.py  llm.py  model.py
genai_infer_service/templates/: swagger_custom.html
genai_infer_service/tests/: openapi.py  prompt_template.py
